--- a/src/app/core/sidebar/details/details.component.html
+++ b/src/app/core/sidebar/details/details.component.html
@@ -72,7 +72,7 @@
     <p *ngIf="linkUrl">
       {{ "link" | translate }}:
       <a [href]="linkUrl" target="_blank" style="display: inline">{{
-        poi.properties.metadata.url
+        linkUrl
       }}</a>
     </p>
 
@@ -158,7 +158,7 @@
     <p *ngIf="linkUrl">
       {{ "link" | translate }}:
       <a [href]="linkUrl" target="_blank" style="display: inline">{{
-        poi.properties.metadata.url
+        linkUrl
       }}</a>
     </p>
 
