chore(package.json): update proximiio-js-library version to 1.9.30 feat(app.component.ts): add support for Italian language (it) fix(details.component.html): call getFloorName method instead of directly accessing floor name property fix(details.component.ts): import FloorModel from proximiio-js-library fix(details.component.ts): call getFloorName method instead of directly accessing floor name property fix(floor-picker.component.html): call getFloorName method instead of directly accessing floor name property fix(floor-picker.component.ts): import FloorModel from proximiio-js-library fix(floor-picker.component.ts): call getFloorName method instead of directly accessing floor name property fix(list-view.component.ts): import FloorModel from proximiio-js-library fix(list-view.component.ts): call getFloorName method instead of directly accessing floor name property fix(sidebar.service.ts): import FloorModel from proximiio-js-library feat(it.json): add Italian translation

--- a/src/app/core/sidebar/details/details.component.html
+++ b/src/app/core/sidebar/details/details.component.html
@@ -41,7 +41,7 @@
       {{ "level" | translate }}:
       {{
         poi.properties._dynamic.floor?.name
-          ? poi.properties._dynamic.floor.name
+          ? getFloorName(poi.properties._dynamic.floor)
           : (poi.properties.level + 1 | ordinal)
       }}
     </h4>
