fix ios zoom issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,3 +107,11 @@ body {
     font-family: GE SS Two, "Helvetica Neue", sans-serif;
   }
 }
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  select,
+  textarea,
+  input {
+    font-size: 16px;
+  }
+}
