--- a/src/app/core/settings-dialog/settings-dialog.component.html
+++ b/src/app/core/settings-dialog/settings-dialog.component.html
@@ -1,7 +1,8 @@
 <h1 mat-dialog-title>{{ "kioskSettings" | translate }}</h1>
 <form [formGroup]="settingsForm">
   <div mat-dialog-content>
-    <mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>{{ "latitude" | translate }}</mat-label>
       <input
         matInput
         type="number"
@@ -13,7 +14,8 @@
         >{{ "enterValid" | translate }} {{ "latitude" | translate }}.</mat-error
       >
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>{{ "longitude" | translate }}</mat-label>
       <input
         matInput
         type="number"
@@ -26,7 +28,8 @@
         {{ "longitude" | translate }}.</mat-error
       >
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>{{ "level" | translate }}</mat-label>
       <input
         matInput
         type="number"
@@ -38,7 +41,8 @@
         >{{ "enterValid" | translate }} {{ "level" | translate }}.</mat-error
       >
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>{{ "zoom" | translate }}</mat-label>
       <input
         matInput
         type="number"
@@ -50,7 +54,8 @@
         >{{ "enterValid" | translate }} {{ "zoom" | translate }}.</mat-error
       >
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>{{ "bearing" | translate }}</mat-label>
       <input
         matInput
         type="number"
@@ -62,7 +67,8 @@
         >{{ "enterValid" | translate }} {{ "bearing" | translate }}.</mat-error
       >
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>{{ "pitch" | translate }}</mat-label>
       <input
         matInput
         type="number"
