--- a/src/app/core/sidebar/closest-amenity/closest-amenity.component.scss
+++ b/src/app/core/sidebar/closest-amenity/closest-amenity.component.scss
@@ -95,7 +95,7 @@
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
-      .mat-form-field {
+      .mat-mdc-form-field {
         width: auto;
       }
     }
