--- a/src/app/core/sidebar/sidebar.component.scss
+++ b/src/app/core/sidebar/sidebar.component.scss
@@ -46,7 +46,7 @@
   top: 210px;
   gap: 5px;
 
-  .mat-icon-button {
+  .mat-mdc-icon-button {
     background: black;
     font-size: 16px;
     line-height: 35px;
